# FlappyBird

./: Cargo.toml
src/: app.rs  basic.rs  bird.rs  draw.rs  game.rs  main.rs  pipes.rs  utils.rs
