[package]
name = "flappy_bird"
version = "0.1.0"
authors = ["Cheng Li <lichengac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
# piston_window = "0.119.0"
piston = "0.53.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.68.0"
piston2d-opengl_graphics = "0.77.0"